--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # application
-.utilities/config.js
+utilities/config.js
 
 # expo
 .expo/
